# xwords-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  bigrams.bincode  bigrams.json  wordlist.json
.github/workflows/: bench.yml  build.yml  rust.yml
benches/: build.rs  clone.rs  fill.rs  fill_crossword.rs  fill_crossword_simple.rs  fill_crossword_single_threaded.rs  filler.rs  is_viable.rs  score_crossword.rs  score_iter.rs  trie.rs
examples/: empty.rs  sample.rs  snippet.rs
grids/: 20201005_empty.txt  20201012_empty.txt  20201107_empty.txt  20201124_empty.txt  20201128_empty.txt  code_project.txt  empty_4x4.txt  step_one.txt  step_two.txt
src/: crossword.rs  fill.rs  lib.rs  ngram.rs  order.rs  parse.rs  single_threaded_fill.rs  tmp.xword  trie.rs
src/fill/: cache.rs  filler.rs  mod.rs  mpmc.rs  parallel.rs  simple.rs  single_threaded.rs
