[package]
name = "xwords"
version = "0.1.0"
authors = ["Sam Szuflita <sam.szuflita@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tooling to fill crossword puzzles"
repository = "https://github.com/szunami/xwords-rs"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
bincode = "1.3.1"
cached = "0.20.0"
rustc-hash = "1.1.0"
parking_lot = "0.11.1"

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.3", features = ["flamegraph"] } 

[[example]]
name = "sample"
path = "examples/sample.rs"

[[example]]
name = "empty"
path = "examples/empty.rs"

[[example]]
name = "snippet"
path = "examples/snippet.rs"

[profile.release]
debug = 1

[[bench]]
name = "fill_crossword"
harness = false

[[bench]]
name = "is_viable"
harness = false

[[bench]]
name = "score_iter"
harness = false

[[bench]]
name = "fill_crossword_single_threaded"
harness = false

[[bench]]
name = "score_crossword"
harness = false