[package]
name = "xwords"
version = "0.3.1"
authors = ["Sam Szuflita <sam.szuflita@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tooling to fill crossword puzzles"
repository = "https://github.com/szunami/xwords-rs"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli"]
cli = ["clap", "pprof"]

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
bincode = "1.3.1"
rustc-hash = "1.1.0"
clap = { version = "2.33.3", optional = true}
pprof = { version = "0.3", features = ["flamegraph"], optional = true } 
[dev-dependencies]
criterion = "0.3"


[[bin]]
name = "xwords"
required-features = ["cli"]

[[example]]
name = "snippet"
path = "examples/snippet.rs"

[profile.release]
debug = 1

[[bench]]
name = "filler"
harness = false

[[bench]]
name = "trie"
harness = false